--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,31 @@
+backcall==0.1.0
 beautifulsoup4==4.6.0
+certifi==2018.1.18
+chardet==3.0.4
 cssselect==1.0.3
+decorator==4.2.1
+idna==2.6
+ipdb==0.11
+ipython==6.3.1
+ipython-genutils==0.2.0
+jedi==0.11.1
 lxml==4.1.1
+mysql-connector==2.1.6
+parso==0.1.1
+peewee==3.2.2
+pexpect==4.5.0
+pickleshare==0.7.4
+prompt-toolkit==1.0.15
+ptyprocess==0.5.2
+Pygments==2.2.0
 pymongo==3.6.0
+PyMySQL==0.8.0
 pyquery==1.4.0
 python-dateutil==2.6.1
 pytz==2018.3
+requests==2.18.4
+simplegeneric==0.8.1
 six==1.11.0
+traitlets==4.3.2
+urllib3==1.22
+wcwidth==0.1.7
