update travis to create log file

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,7 @@ install:
     - pip install -r requirements.txt
 
 script:
+    - mkdir log
+    - touch ./log/movie_rating.log
     - pytest -v  ./tests/test_movie_rating.py
 
